# lambert-bate

./: Cargo.toml  LICENSE  README.md  lamberthub-compare.py
src/: lib.rs  newton.rs  tests.rs
